# SudoMesh

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  architecture.en.md  architecture.zh-CN.md  architecture.zh-TW.md  demo-script.md  demo-script.zh-CN.md  optimizations.en.md  optimizations.zh-CN.md  optimizations.zh-TW.md  report.html  report.md  report.tex
docs/figures/: fig1_architecture.mmd  fig2_statemachine.mmd  fig3_aggregation.mmd
examples/puzzles/: easy_9x9.txt  hard_9x9.txt  puzzle16.txt  puzzle16_hard.txt
src/swarmsolve/: __init__.py  cli.py  peer.py  puzzles.py
src/swarmsolve/discovery/: __init__.py  kademlia.py  node_id.py  routing.py
src/swarmsolve/gossip/: __init__.py  gossip.py
src/swarmsolve/solver/: __init__.py  board.py  search.py
src/swarmsolve/tasks/: __init__.py  guard.py  scheduler.py  task.py
src/swarmsolve/transport/: __init__.py  messages.py  transport.py
tests/: test_dht.py  test_guards.py  test_optimizations.py  test_solver.py  test_work_stealing.py
