[project]
name = "swarmsolve"
version = "0.1.0"
description = "SwarmSolve - a decentralized P2P system for solving very large Sudoku puzzles"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SwarmSolve Team" }]
dependencies = [
    "rich>=13.7.0",     # pretty terminal output / live dashboard
    "typer>=0.12.0",    # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
swarmsolve = "swarmsolve.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarmsolve"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
